--- a/main.html
+++ b/main.html
@@ -7,6 +7,11 @@
   <title>Kóstolj Bele!</title>
 </head>
 <body>
-  
+  <article>
+    <header>
+      <h1>Kóstolj Bele! Pizzéria</h1>
+    </header>
+    <footer>Itt lesz egy nagyon jó mottó</footer>
+  </article>
 </body>
 </html>
