--- a/main.html
+++ b/main.html
@@ -15,9 +15,11 @@
       <h1>Kóstolj Bele! Pizzéria</h1>
     </header>
 
-    <iframe width="420" height="345" src="https://www.youtube.com/watch?v=nqn1gPB0EPk">
+    <iframe width="420" height="345" src="https://www.youtube.com/embed/tgbNymZ7vqY">
     </iframe>
+    <a href="https://eurobarca.hu">Itt</a>
     <footer>Itt lesz egy nagyon jó mottó</footer>
   </article>
+  
 </body>
 </html>
